--- a/src/main/webapp/static/css/Pre/PreCustomPage.css
+++ b/src/main/webapp/static/css/Pre/PreCustomPage.css
@@ -1,6 +1,6 @@
 body { background-color: #eee; padding:10px}
 .box {width: 160px; height: 160px; cursor: move; background-color: #FFF; border: 1px solid #CCCCCC}
-.main_tabletop{width: 100%;height:20px;background:#ffee00;}
+.boxTopDrage{width: 100%;height:20px;background:#ffee00;}
 .box2 {
 	width: 160px; height: 160px; cursor: move; background-color: #FFF; border: 1px solid blue;
 }
@@ -27,6 +27,10 @@ body { background-color: #eee; padding:10px}
 	left:0px;
 	top:-140px;
 	cursor:pointer;
-	height:auto;
-	width:auto;
+}
+#savePageButton{
+	position:absolute;
+	left:95%;
+	top:180px;
+	cursor:pointer;
 }
