前台页面优化

--- a/src/main/webapp/static/css/Pre/main.css
+++ b/src/main/webapp/static/css/Pre/main.css
@@ -143,7 +143,7 @@ html .ma {
 /* 2.1.Logo */
 .logo {
     display: block;
-    background-image: url(../img/png-sprite/96dpi/sprite.png);
+    background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
     background-position: 0px 0px;
     width: 147px;
     height: 26px;
@@ -909,7 +909,7 @@ a.special__link:focus {
   content: "";
   top: 32px;
   left: -8px;
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -117px -64px;
   width: 15px;
   height: 15px;
@@ -918,7 +918,7 @@ a.special__link:focus {
 }
 
 .header_news_panel .nav-tabs li.active a:before {
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -49px -93px;
   width: 15px;
   height: 15px;
@@ -1077,7 +1077,7 @@ a.special__link:focus {
 }
 
 .share .bg_facebook {
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -84px -93px;
   width: 7px;
   height: 12px;
@@ -1086,7 +1086,7 @@ a.special__link:focus {
 }
 
 .share .bg_twitter {
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -136px -64px;
   width: 11px;
   height: 10px;
@@ -1095,7 +1095,7 @@ a.special__link:focus {
 }
 
 .share .bg_google {
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -68px -93px;
   width: 12px;
   height: 12px;
@@ -1255,7 +1255,7 @@ article .quote {
 }
 
 .right_sidebar ul li.active a:before {
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -49px -93px;
   width: 15px;
   height: 15px;
@@ -1269,7 +1269,7 @@ article .quote {
   content: "";
   top: 32px;
   left: -8px;
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: -117px -64px;
   width: 15px;
   height: 15px;
@@ -1456,7 +1456,7 @@ article .quote {
   content: '';
   top: 12px;
   left: 15px;
-  background-image: url(../img/png-sprite/96dpi/sprite.png);
+  background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
   background-position: 0px -30px;
   width: 59px;
   height: 59px;
@@ -1980,7 +1980,7 @@ article .quote {
     margin-bottom: 14px;
   }
   .twitter__header::before {
-    background-image: url(../img/png-sprite/96dpi/sprite.png);
+    background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
     background-position: -63px -30px;
     width: 50px;
     height: 50px;
@@ -2080,7 +2080,7 @@ article .quote {
     font-size: 9px;
   }
   .twitter__header::before {
-    background-image: url(../img/png-sprite/96dpi/sprite.png);
+    background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
     background-position: 0px -93px;
     width: 45px;
     height: 45px;
@@ -2171,7 +2171,7 @@ article .quote {
     font-size: 14px;
   }
   .twitter__header::before {
-    background-image: url(../img/png-sprite/96dpi/sprite.png);
+    background-image: url(../../images/Pre/png-sprite/96dpi/sprite.png);
     background-position: -117px -30px;
     width: 30px;
     height: 30px;
