--- a/src/main/webapp/static/css/Pre/fontello.css
+++ b/src/main/webapp/static/css/Pre/fontello.css
@@ -1,8 +1,8 @@
 /* SVG - fonts */
 @font-face {
   font-family: 'fontello';
-  src: url("../fonts/fontello.eot?44020949");
-  src: url("../fonts/fontello.eot?44020949#iefix") format("embedded-opentype"), url("../fonts/fontello.woff?44020949") format("woff"), url("../fonts/fontello.ttf?44020949") format("truetype"), url("../fonts/fontello.svg?44020949#fontello") format("svg");
+  src: url("../../fonts/fontello.eot?44020949");
+  src: url("../../fonts/fontello.eot?44020949#iefix") format("embedded-opentype"), url("../../fonts/fontello.woff?44020949") format("woff"), url("../../fonts/fontello.ttf?44020949") format("truetype"), url("../../fonts/fontello.svg?44020949#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
